Fix to show bacground image on iOS 26.0.1

--- a/css/custom.css
+++ b/css/custom.css
@@ -23,6 +23,13 @@ body {
   height: 40vh;
 }
 
+/* Fix for iOS Safari and mobile browsers */
+@media (max-width: 800px) {
+  .hero-section {
+    background-attachment: scroll;
+  }
+}
+
 .hero-index {
   background-image: url('../images/carousel3.jpg');
 }
